@@ -1,3 +1,7 @@
+2007-09-29  Badlop  <badlop@ono.com>
+
+	* src/mod_multicast.erl: Huge reorganization of do_route* functions.
+
 2007-08-18  Badlop  <badlop@ono.com>
 
 	* src/mod_multicast.erl: Removed 'unrestricted' type of limits because it's unusued, as reported by Dialyzer.
